# backend/docs/swagger/swagger.json
@@ -1949,12 +1949,12 @@
                 "summary": "Create a Stripe payment intent",
                 "parameters": [
                     {
-                        "description": "Order ID",
+                        "description": "Stripe payment request",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.createPaymentRequest"
+                            "$ref": "#/definitions/internal_handlers.createStripePaymentRequest"
                         }
                     }
                 ],
@@ -2510,6 +2510,23 @@
             "properties": {
                 "order_id": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_handlers.createStripePaymentRequest": {
+            "type": "object",
+            "required": [
+                "order_id"
+            ],
+            "properties": {
+                "order_id": {
+                    "type": "string"
+                },
+                "payment_method_id": {
+                    "type": "string"
+                },
+                "save_card": {
+                    "type": "boolean"
                 }
             }
         },
